--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libboxer"
+name = "boxer"
 version = "0.1.0"
 authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
 edition = "2018"
