--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,6 @@
-[package]
-name = "boxer"
-version = "0.1.0"
-authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
-edition = "2018"
+[workspace]
 
-[lib]
-name = "boxer"
-path = "src/lib.rs"
-
-[profile.dev]
-opt-level = 0
-
-[profile.release]
-opt-level = 3
+members = [
+    "boxer",
+    "boxer-ffi"
+]
