--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -12,7 +12,7 @@ jobs:
                     - os: macos-latest
         steps:
             - uses: actions/checkout@master
-            - name: Install latest nightly
+            - name: Install latest stable
               uses: actions-rs/toolchain@v1
               with:
                 toolchain: stable
