add windows build

--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -10,6 +10,7 @@ jobs:
                 variant:
                     - os: ubuntu-18.04
                     - os: macos-latest
+                    - os: windows-latest
         steps:
             - uses: actions/checkout@master
             - name: Install latest stable
