--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -2,15 +2,23 @@ name: Continuous integration
 on: [push, pull_request]
 
 jobs:
-    build-unixes:
-        name: Build Unixes
+    build:
+        name: Build
+        env:
+            LIBRARY: Boxer
         runs-on: ${{ matrix.variant.os }}
         strategy:
             matrix:
                 variant:
                     - os: ubuntu-18.04
+                      artifact: lib$LIBRARY.so
+                      deploy: /var/www/html/$LIBRARY/linux/development/x86_64/lib$LIBRARY.so
                     - os: macos-latest
+                      artifact: lib$LIBRARY.dylib
+                      deploy: /var/www/html/$LIBRARY/osx/development/x86_64/lib$LIBRARY.dylib
                     - os: windows-latest
+                      artifact: $LIBRARY.dll
+                      deploy: /var/www/html/$LIBRARY/windows/development/x86_64/lib$LIBRARY.dll
         steps:
             - uses: actions/checkout@master
             - name: Install latest stable
@@ -23,3 +31,9 @@ jobs:
               with:
                 command: build
                 args: --release
+            - name: Deploy
+              uses: alinz/ssh-scp-action@master
+              with:
+                  key: ${{ secrets.SSH_KEY }}
+                  host: ${{ secrets.FEENK_CLOUD }}
+                  
