--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -11,12 +11,15 @@ jobs:
             matrix:
                 variant:
                     - os: ubuntu-18.04
+                      artifact: lib$LIBRARY.so
                       extension: .so
                       deploy: linux
                     - os: macos-latest
+                      artifact: lib$LIBRARY.dylib
                       extension: .dylib
                       deploy: osx
                     - os: windows-latest
+                      artifact: $LIBRARY.dll
                       extension: .dll
                       deploy: windows
         steps:
@@ -32,7 +35,7 @@ jobs:
                 command: build
                 args: --release
             - name: Deploy
-              uses: appleboy/scp-action@master
+              uses: garygrossgarten/github-action-scp@release
               with:
                   host: ${{ secrets.FEENK_CLOUD }}
-                  key: ${{ secrets.SSH_KEY }}
+                  privateKey: ${{ secrets.SSH_KEY }}
