--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -39,5 +39,6 @@ jobs:
               with:
                   local: target/release/libBoxer.so
                   remote: /var/www/html/boxer/linux/development/x86_64/libBoxer.so
-                  host: ${{ secrets.FEENK_CLOUD }}
+                  host: ec2-3-122-60-80.eu-central-1.compute.amazonaws.com
+                  username: ubuntu
                   privateKey: ${{ secrets.SSH_KEY }}
