--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -38,7 +38,7 @@ jobs:
               uses: garygrossgarten/github-action-scp@release
               with:
                   local: target/release/${{matrix.variant.artifact}}${{LIBRARY}}.${{matrix.variant.extension}}
-                  remote: /var/www/html/${{LIBRARY}}/${{matrix.variant.deploy}}/development/x86_64/lib${{LIBRARY}}.${{matrix.variant.extension}}
+                  remote: /var/www/html/$LIBRARY/${{matrix.variant.deploy}}/development/x86_64/lib$LIBRARY.${{matrix.variant.extension}}
                   host: ${{ secrets.FEENK_CLOUD }}
                   username: ubuntu
                   privateKey: ${{ secrets.SSH_KEY }}
