--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             matrix:
                 variant:
-                    - os: ubuntu-18.04
+                    - os: ubuntu-latest
                       prefix: lib
                       extension: .so
                       platform: linux
