[feenkcom/gtoolkit#809] set osx min version to 10.9

--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -38,6 +38,8 @@ jobs:
               with:
                 command: build
                 args: --release
+              env:
+                MACOSX_DEPLOYMENT_TARGET: 10.9
             - name: Deploy
               uses: garygrossgarten/github-action-scp@release
               with:
